@@ -89,6 +89,13 @@ class FromChangeSet(FileContents):
 	self.cs = cs
 	self.pathId = pathId
 
+class CompressedFromChangeSet(FromChangeSet):
+
+    def get(self):
+        import lib
+        lib.epdb.st()
+	return self.cs.getFileContents(self.pathId, compressed = True)[1].get()
+
 class FromString(FileContents):
 
     __slots__ = "str"
